<resources>
    <string name="app_name">Events</string>
    <!-- Strings related to activities tittle-->
    <!-- Strings related to login -->
    <string name="user">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_invalid_user">El usuario es muy corto</string>
    <string name="error_incorrect_password">Usuario o contraseña incorrectos</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="correo">E-mail</string>
    <string name="Registrarse">Registrarse</string>
    <string name="invalid_mail">El correo no es válido</string>
    <string name="pass_no_equals">Las contraseñas no coinciden</string>
    <string name="user_exists">El usuario ya existe</string>
    <string name="register_cancelled">El registro fue cancelado</string>
    <string name="good_register">Registro exitoso</string>
    <string name="user_no_exists">El usuario no existe</string>
    <string name="confirmarConstraseña">Confirmar Constraseña</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about">Acerca de</string>
    <string name="events">Eventos</string>
    <string name="settings">Configuraciones</string>
    <string name="login">Iniciar sesión o registrarse</string>
    <string name="profile">Perfil</string>
    <string name="action_settings">Cerrar sesión</string>
    <string name="sinEventos">No hay enventos disponibles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">age</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
