<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/user"
            android:title="@string/profile" />
        <item
            android:id="@+id/events"
            android:icon="@drawable/calendar"
            android:title="@string/events" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/about" />

        <item
            android:id="@+id/settingsNav"
            android:icon="@drawable/settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="Cerrar sesión" />

    </group>
</menu>
