<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Registro"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextUsuario"
                    android:inputType="text"
                    android:hint="@string/prompt_user"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextContraseña"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextConfirmarPass"
                    android:inputType="textPassword"
                    android:hint="@string/confirmarConstraseña"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText5Email"
                    android:inputType="textEmailAddress"
                    android:hint="@string/correo"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editTextAge"
                    android:inputType="number"
                    android:hint="@string/age"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="10dp" />
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:id="@+id/galleryButton"
                        android:onClick="ClickGallery"
                        android:src="@android:drawable/ic_menu_gallery"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="40dp"
                        android:background="@drawable/round_button" />

                <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_below="@id/galleryButton"
                        android:id="@+id/cameraButton"
                        android:onClick="ClickCamera"
                        android:src="@android:drawable/ic_menu_camera"
                        android:background="@drawable/round_button"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="40dp"/>

                <ImageView
                    android:layout_toRightOf="@id/cameraButton"
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:id="@+id/profilePicture"
                    android:layout_marginRight="20dp" />
            </RelativeLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Registrarse"
                android:id="@+id/buttonRegistarse"
                android:onClick="Validar"
                android:textColor="#fcfafa"
                android:textStyle="bold"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_marginTop="20dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
